Dodano klikalne szczegóły ocen

--- a/VulcanForWindows/GradesPage.xaml
+++ b/VulcanForWindows/GradesPage.xaml
@@ -48,6 +48,45 @@
                 </TextBlock>
             </StackPanel>
         </DataTemplate>
+
+        <DataTemplate x:Key="GradeFullInfo" x:DataType="grade:Grade">
+            <!-- Define the content of your Flyout here -->
+            <StackPanel Width="200">
+                <ListView HorizontalContentAlignment="Center" Padding="0,0,0,15" SelectionMode="None">
+                    <Border Background="green" VerticalAlignment="Stretch" HorizontalAlignment="Center" Height="60" Width="60" CornerRadius="3">
+                        <TextBlock TextAlignment="Center" Width="35"  VerticalAlignment="Center" Text="{x:Bind ContentRaw}" FontSize="32" FontWeight="Bold"/>
+                    </Border>
+                </ListView>
+                <TextBlock FontWeight="Bold" FontSize="16" TextWrapping="WrapWholeWords">
+                    <Run Text="{x:Bind Column.Name}"/>
+                    <Run Text="("/>
+                    <Run Text="{x:Bind Column.Code}"/>
+                    <Run Text=")"/>
+                </TextBlock>
+                <Rectangle Height="10"/>
+                <TextBlock>
+                    <Run Text="Wpisano:"/>
+                    <Run Text="{x:Bind DateCreated}"/>
+                </TextBlock>
+                <TextBlock>
+                    <Run Text="Autor:"/>
+                    <Run Text="{x:Bind CreatorName}"/>
+                </TextBlock>
+
+                <TextBlock>
+                    <Run Text="Edytowano:"/>
+                    <Run Text="{x:Bind DateModify}"/>
+                </TextBlock>
+                <TextBlock>
+                    <Run Text="Komentarz:"/>
+                    <Run Text="{x:Bind Comment}"/>
+                </TextBlock>
+                <TextBlock Visibility="{x:Bind IsModified}">
+                    <Run Text="Waga:"/>
+                    <Run Text="{x:Bind Column.Weight}"/>
+                </TextBlock>
+            </StackPanel>
+        </DataTemplate>
         <DataTemplate x:Key="SubjectGradesInfoFlyout" x:Name="SubjectGradesInfoFlyout" x:DataType="classes:SubjectGrades">
             <!-- Define the content of your Flyout here -->
             <StackPanel Width="400">
@@ -72,9 +111,9 @@
                 <NumberBox
     Header="Waga:"
     Value="1"
-    SpinButtonPlacementMode="Compact"
+    SpinButtonPlacementMode="Inline"
     SmallChange="1"
-    LargeChange="2" ValueChanged="ChangedWeight" Margin="0,0,0,10" Minimum="1"/>
+    LargeChange="2" ValueChanged="ChangedWeight" Margin="0,0,0,10" Minimum="1" />
 
                 <TextBlock Tag="6"></TextBlock>
                 <TextBlock Tag="5"></TextBlock>
@@ -94,14 +133,14 @@
                 <NumberBox Tag="grade" x:Name="grade"
     Header="Ocena:"
     Value="1"
-    SpinButtonPlacementMode="Compact"
+    SpinButtonPlacementMode="Inline"
     SmallChange="1"
     LargeChange="2" Margin="0,0,0,10" Maximum="6" Minimum="1"/>
 
                 <NumberBox Tag="weight" x:Name="weight"
     Header="Waga:"
     Value="1"
-    SpinButtonPlacementMode="Compact"
+    SpinButtonPlacementMode="Inline"
     SmallChange="1"
     LargeChange="2" Margin="0,0,0,10"/>
 
@@ -137,7 +176,9 @@
                 <Grid>
                     <Grid.Resources>
                         <DataTemplate x:Key="GradeTemplate" x:DataType="grade:Grade">
-                            <ListView SelectionMode="None" Padding="0,0,0,5" PointerEntered="ListView_PointerEntered" PointerExited="ListView_PointerExited">
+                            <ListView SelectionMode="None" Padding="0,0,0,5" 
+                                      PointerEntered="ListView_PointerEntered" PointerExited="ListView_PointerExited"
+                                      Tapped="ViewGradeDetails">
                                 <ListView.ItemContainerStyle>
                                     <Style TargetType="ListViewItem">
                                         <Setter Property="Padding" Value="8,0,0,0"/>
